examples/good/16_break_continue.xd
int main() {
    int i = 1;
    while (i > 0) {
        i = i + 1;
        break;
    }

    while (i > 0) {
        i = i - 1;
        continue;
        i = i + 1;
    }

    yeet 0;
}
